--- a/views/shared/includes/product-item.ejs
+++ b/views/shared/includes/product-item.ejs
@@ -1,5 +1,5 @@
 <article class="product-item">
-    <img src="<%= product.image %>" alt="<%= product.title %>">
+    <img src="https://res.cloudinary.com/dlgtx9os2/image/upload/v1644895651/plants/egiabfkjjcw9bsufncx3.png" alt="<%= product.title %>">
     <div class="product-item-content">
         <h2><%= product.title %></h2>
         <div class="product-item-actions">
