making it better

--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -6,7 +6,7 @@
 <%- include('../../shared/includes/header') %>
 <main id="product-details">
     <header>
-    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+    <img src="https://res.cloudinary.com/dlgtx9os2/image/upload/v1644895651/plants/egiabfkjjcw9bsufncx3.png" alt="<%= product.title %>">
     <div id="product-info">
         <h1><%= product.title %></h1>
         <p>$<%= product.price %></p>
